Wrapping Up Added content, description to the meta in the head of html for good seo and created a read.me file

--- a/game.html
+++ b/game.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Quiz Application</title>
-  <link rel="stylesheet" type="text/css" href="assets/game.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="comptia-a-220-1001-exam-answer" />
+    <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
+    <title>comptia-a-220-1001-exam-answer</title>
+    <link rel="stylesheet" type="text/css" href="/assets/game.css">
 </head>
 <body>
   <div id="quiz-container">
     <button id="toggleBtn"  value="ON" onclick="rule()"> Rules</button>
     <ul ></ul>
-    
-    <audio src="/assets/wizkid.m4a" controls muted loop></audio>
+
+
         <div  class="details">
             <input type="text" id="myname" value="Enter username" >
             <button onclick="inpt()" class="onebtn">Submit</button>
@@ -18,6 +23,7 @@
         </div>
            <h2 id="nameEl"></h2>
     <h1>Quiz Application</h1>
+    <audio src="/assets/wizkid.m4a" controls muted loop></audio>
     <div id="question"></div>
     <br>
     <div>
