--- a/review.html
+++ b/review.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="comptia-a-220-1001-exam-answer" />
+    <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
+    
     <title>comptia-a-220-1001-exam-answer</title>
 </head>
 <link rel="stylesheet" type="text/css" href="/assets/Review.css">
