New files and images The README file was created and linked with images of different viewport of screens and also interface.Some of the new images were added to the documentation folder while the others into the images folder

--- a/game.html
+++ b/game.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <div id="quiz-container">
-    <button id="toggleBtn"  value="ON" onclick="rule()"> Rules</button>
+    <div class="links">
+        <a href="review.html" target="_blank">Home</a>
+        <button id="toggleBtn"  value="ON" onclick="rule()"> Rules</button>
+    </div>
     <ul ></ul>
 
 
