--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="comptia-a-220-1001-exam-answer" />
     <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
     <title>comptia-a-220-1001-exam-answer</title>
-    <link rel="stylesheet" type="text/css" href="/assets/game.css">
+    <link rel="stylesheet" type="text/css" href="assets/game.css">
 </head>
 <body>
   <div id="quiz-container">
@@ -26,7 +26,7 @@
         </div>
            <h2 id="nameEl"></h2>
     <h1>Quiz Application</h1>
-    <audio src="/assets/wizkid.m4a" controls muted loop></audio>
+    <audio src="assets/wizkid.m4a" controls muted loop></audio>
     <div id="question"></div>
     <br>
     <div>
