--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
     <title>comptia-a-220-1001-exam-answer</title>
     <link rel="stylesheet" type="text/css" href="assets/game.css">
+    <link rel="stylesheet" type="text/css" href="assets/Review.css">
 </head>
 <body>
   <div id="quiz-container">
