changed the path to  images because its still showing as broken

--- a/review.html
+++ b/review.html
@@ -15,9 +15,9 @@
     <main>
     <div class="main">
         <h1>Comptia A+ 220-1001 Certification Questions Answers</h1>
-        <img src="images/comptia-a-220-1001-exam-answer.webp" alt="comptia logo">
+        <img src="assets/images/comptia-a-220-1001-exam-answer.webp" alt="comptia logo">
    </div>
-      <a href="game.html" alt="_blank"><button>Start Review Questions</button></a>
+      <a href="index.html" alt="_blank"><button>Start Review Questions</button></a>
     </main>
     </body>
 </html>
