--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#317EFB"/>
     <meta name="description" content="comptia-a-220-1001-exam-answer" />
     <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
     <title>comptia-a-220-1001-exam-answer</title>
