updated js,css The js was refactored to make input field to clear when the user submits  username. In addition to this, the color schemes was changed to more  appealing and contrasting in the css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <div  class="details">
-            <input type="text" id="myname" value="Enter username" >
+            <input type="text" id="myname" placeholder="Enter username" >
             <button onclick="inpt()" class="onebtn">Submit</button>
             <button id="score">0</button>
 
@@ -31,9 +31,9 @@
     <div id="question"></div>
     <br>
     <div>
-     
+      
     </div>
-     <button id="reveal">Reveal Answer</button>
+     <button id="reveal">Submit</button>
   </div>
 
   <script src="./game.js"></script>
