--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#317EFB"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#317EFB" />
     <meta name="description" content="comptia-a-220-1001-exam-answer" />
-    <meta name="keywords" content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"/>
+    <meta
+      name="keywords"
+      content="comptia, comptia A+,comptia A+ Review question, comptia-a-220-1001-exam-answer"
+    />
     <title>comptia-a-220-1001-exam-answer</title>
-    <link rel="stylesheet" type="text/css" href="assets/game.css">
-    
-</head>
-<body>
-  <div id="quiz-container">
-    <div class="links">
-        <button id="toggleBtn"  value="ON" onclick="rule()"> Rules</button>
+    <link rel="stylesheet" type="text/css" href="assets/game.css" />
+  </head>
+  <body>
+    <div id="quiz-container">
+      <div class="links">
+        <button id="toggleBtn" value="ON" onclick="rule()">Rules</button>
+      </div>
+      <ul></ul>
+
+      <div class="details">
+        <input type="text" id="myname" placeholder="Enter username" />
+        <button onclick="inpt()" class="onebtn">Submit</button>
+        <button id="score">0</button>
+      </div>
+      <h2 id="nameEl"></h2>
+      <h1>Quiz Application</h1>
+      <audio src="assets/wizkid.m4a" controls muted loop></audio>
+      <div id="question"></div>
+      <br />
+      <div></div>
+      <button id="reveal">Submit</button>
     </div>
-    <ul ></ul>
 
-
-        <div  class="details">
-            <input type="text" id="myname" placeholder="Enter username" >
-            <button onclick="inpt()" class="onebtn">Submit</button>
-            <button id="score">0</button>
-
-        </div>
-           <h2 id="nameEl"></h2>
-    <h1>Quiz Application</h1>
-    <audio src="assets/wizkid.m4a" controls muted loop></audio>
-    <div id="question"></div>
-    <br>
-    <div>
-      
-    </div>
-     <button id="reveal">Submit</button>
-  </div>
-
-  <script src="./game.js"></script>
-</body>
+    <script src="assets/js/game.js"></script>
+  </body>
 </html>
